--- a/Kcube.html
+++ b/Kcube.html
@@ -285,7 +285,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>© <span id="year"></span> Kcube Solutions. All Rights Reserved.</p>
+                <p>© <span id="year"></span> Kcube Solutions. All Rights Reserved. Made with 💙 By Kcube Solutions</p>
             </div>
         </div>
     </footer>
