--- a/Kcube.html
+++ b/Kcube.html
@@ -215,7 +215,7 @@
         <div class="footer-content">
             <!-- About -->
             <div class="footer-col">
-                <h3>Kcube Hospitality</h3>
+                <h3>Kcube Solutions</h3>
                 <p>Delivering smart, scalable hospitality management services to streamline operations, improve guest experience, and grow revenue.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
