--- a/Kcube.html
+++ b/Kcube.html
@@ -41,7 +41,7 @@
     <div class="hero-content">
         <h1>Empowering Hospitality with Smart Management Solutions</h1>
         <p>
-            Kcube Hospitality offers end-to-end hotel management services—from OTA updates and revenue optimization to reputation and guest communication. 
+            Kcube Hospitality offers end-to-end hotel management services from OTA updates and revenue optimization to reputation and guest communication. 
             Our technology-driven approach helps you save time, enhance guest satisfaction, and grow your business efficiently.
         </p>
         <a href="#services" class="btn btn-primary">Explore Our Services</a>
