--- a/Kcube.html
+++ b/Kcube.html
@@ -155,7 +155,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
+   <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-container">
@@ -168,21 +168,28 @@
                         <div>
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Our Location :</h4>&nbsp;&nbsp;
-                                <p>1245 American Avenue,Plainfield IN 46168</p>
+                                <h4>Our Location</h4>
+                                <p>1245</p>
+                            </div>
+                        </div>
+                        <div>
+                            <i class="fas fa-phone"></i>
+                            <div>
+                                <h4>Call Us</h4>
+                                <p>[YOUR PHONE NUMBER]</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-envelope"></i>
                             <div>
-                                <h4>Email Us :</h4>&nbsp;&nbsp;
-                                <p>Contact@kcubesol.onmicrosoft.com</p>
+                                <h4>Email Us</h4>
+                                <p>[YOUR EMAIL ADDRESS]</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-clock"></i>
                             <div>
-                                <h4>Contact Hours :</h4>&nbsp;&nbsp;
+                                <h4>Business Hours</h4>
                                 <p>Monday - Friday: 9am - 6pm</p>
                             </div>
                         </div>
