--- a/Kcube.html
+++ b/Kcube.html
@@ -168,22 +168,16 @@
                         <div>
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Our Location</h4>
-                                <p>1245</p>
-                            </div>
-                        </div>
-                        <div>
-                            <i class="fas fa-phone"></i>
-                            <div>
-                                <h4>Call Us</h4>
-                                <p>[YOUR PHONE NUMBER]</p>
+                                <h4>Our Location:</h4>
+                                <p>1245 American Avenue
+                                    Plainfield IN 46168</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email Us</h4>
-                                <p>[YOUR EMAIL ADDRESS]</p>
+                                <p>Contact@kcubesol.onmicrosoft.com</p>
                             </div>
                         </div>
                         <div>
