--- a/Kcube.html
+++ b/Kcube.html
@@ -168,7 +168,7 @@
                         <div>
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Our Location:</h4>
+                                <h4>Our Location: </h4>
                                 <p>1245 American Avenue
                                     Plainfield IN 46168</p>
                             </div>
@@ -176,14 +176,14 @@
                         <div>
                             <i class="fas fa-envelope"></i>
                             <div>
-                                <h4>Email Us</h4>
+                                <h4>Email Us: </h4>
                                 <p>Contact@kcubesol.onmicrosoft.com</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-clock"></i>
                             <div>
-                                <h4>Business Hours</h4>
+                                <h4>Business Hours: </h4>
                                 <p>Monday - Friday: 9am - 6pm</p>
                             </div>
                         </div>
