--- a/Kcube.html
+++ b/Kcube.html
@@ -177,7 +177,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email Us: </h4>
-                                <p>Contact@kcubesol.onmicrosoft.com</p>
+                                <h6>Contact@kcubesol.onmicrosoft.com</h6>
                             </div>
                         </div>
                         <div>
