--- a/Kcube.html
+++ b/Kcube.html
@@ -169,22 +169,22 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Our Location: </h4>
-                                <p>1245 American Avenue
-                                    Plainfield IN 46168</p>
+                                <h5>1245 American Avenue
+                                    Plainfield IN 46168</h5>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email Us: </h4>
-                                <h6>Contact@kcubesol.onmicrosoft.com</h6>
+                                <h5>Contact@kcubesol.onmicrosoft.com</h5>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-clock"></i>
                             <div>
                                 <h4>Business Hours: </h4>
-                                <p>Monday - Friday: 9am - 6pm</p>
+                                <h5>Monday - Friday: 9am - 6pm</h5>
                             </div>
                         </div>
                     </div>
