--- a/Kcube.html
+++ b/Kcube.html
@@ -168,23 +168,23 @@
                         <div>
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Our Location: </h4>
-                                <h5>1245 American Avenue
-                                    Plainfield IN 46168</h5>
+                                <h4>Our Location:</h4>
+                                <p>&nbsp;1245 American Avenue
+Plainfield IN 46168</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-envelope"></i>
                             <div>
-                                <h4>Email Us: </h4>
-                                <h5>Contact@kcubesol.onmicrosoft.com</h5>
+                                <h4>Our Email Adrees:</h4>
+                                <p>&nbsp;Contact@kcubesol.onmicrosoft .com</p>
                             </div>
                         </div>
                         <div>
                             <i class="fas fa-clock"></i>
                             <div>
-                                <h4>Business Hours: </h4>
-                                <h5>Monday - Friday: 9am - 6pm</h5>
+                               <h4>Our Business Hours:</h4>
+                                <p>&nbsp;Monday to Friday [9am - 6pm]</p>
                             </div>
                         </div>
                     </div>
